Addtion of Modal
Addition of markup and styling to facilitate the existance of a modal

--- a/index.html
+++ b/index.html
@@ -98,5 +98,24 @@
       </div>
     </div>
   </main>
+
+  <div class="overlay"></div>
+
+  <div class="modal" id="modal">
+    <div class="container">
+      <h3 class="modal-header">Change Location</h3>
+      <div class="modal-body">
+        <form id="form">
+          <div class="form-group">
+            <input type="text" id="city_input" class="city-input" placeholder="Enter City">
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-form" data-dismiss="modal">Close</button>
+        <button id="w-change-btn" type="button" class="btn btn-form">Save changes</button>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
