Model open-close functions and eventlisters with minor css and html updates

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
           <!-- END OF SECOND SECTION -->
         </div>
-        <button type="button" class="btn" data-toggle="modal" data-target="#locModal">
+        <button type="button" class="btn" data-toggle="modal" data-target="#modal">
           Change Location
         </button>
       </div>
