Added JavaScript to facilitate fetching and displaying API weather data

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-form" data-dismiss="modal">Close</button>
-        <button id="w-change-btn" type="button" class="btn btn-form">Save changes</button>
+        <button id="save_btn" type="button" class="btn btn-form">Save changes</button>
       </div>
     </div>
   </div>
