--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Weather icon and temperature -->
             <div class="icon-temp row">
               <div class="icon-container">
-                <img src="http://cdn.weatherapi.com/weather/64x64/day/116.png" alt="Weather Icon" id="weather_icon">
+                <img src="https://cdn.weatherapi.com/weather/64x64/day/116.png" alt="Weather Icon" id="weather_icon">
               </div>
               <div class="temp-container">
                 <span id="temperature">30°C</span>
