Implementation of local storage
Addition of local storage object to store and retrive location information from last change and removal of all hard coded html content

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
             <!-- Weather icon and temperature -->
             <div class="icon-temp row">
               <div class="icon-container">
-                <img src="https://cdn.weatherapi.com/weather/64x64/day/116.png" alt="Weather Icon" id="weather_icon">
+                <img src="" alt="Weather data by WeatherAPI.com" " id="weather_icon">
               </div>
               <div class="temp-container">
-                <span id="temperature">30°C</span>
+                <span id="temperature"></span>
               </div>
             </div>
             <!-- Weather Condition Text -->
             <div class="condition-container">
-              <span id="condition">Partial Clouds</span>
+              <span id="condition"></span>
             </div>
             <!-- Local Time Text -->
             <div class="time-container">
-              <span id="time">3 : 45 PM</span>
+              <span id="time"></span>
             </div>
           </div>
           <!-- END OF FIRST SECTION -->
           <!-- BEGINNING OF SECOND SECTION -->
           <div class="container">
             <div class="location-container">
-              <span class="location city" id="city">London</span>
-              <span class="location country" id="country">United Kingdom</span>
+              <span class="location city" id="city"></span>
+              <span class="location country" id="country"></span>
             </div>
             <div class="other-conditions-container">
               <ul class="other-conditions-list">
@@ -56,35 +56,35 @@
                   <span class="icon wind-icon">
                     <i class="fas fa-wind"></i>
                   </span>
-                  <span class="wind-data" id="winds">: &ensp;30 kmh, SSW</span>
+                  <span class="wind-data" id="winds"></span>
                 </li>
                 <!--#2 atmospheric pressure -->
                 <li class="pressure list-item">
                   <span class="icon pressure-icon">
                     <i class="fas fa-tachometer-alt"></i>
                   </span>
-                  <span class="pressure-data" id="pressure">: &ensp;1000 mb</span>
+                  <span class="pressure-data" id="pressure"></span>
                 </li>
                 <!--#3 humidity-->
                 <li class="humidity list-item" >
                   <span class="icon humidity-icon">
                     <i class="fas fa-tint"></i>
                   </span>
-                  <span class="humidity-data" id="humidity">:&ensp; 58 %</span>
+                  <span class="humidity-data" id="humidity"></span>
                 </li>
                 <!--#4 uv index -->
                 <li class="uv-index list-item" >
                   <span class="icon uv-index-icon">
                     <i class="fas fa-sun"></i>
                   </span>
-                  <span class="uv-index-data" id="uv_index">: &ensp;4</span>
+                  <span class="uv-index-data" id="uv_index"></span>
                 </li>
                 <!--#5 air quality -->
                 <li class="air-quality list-item">
                   <span class="icon air-quality-icon">
                     <i class="fas fa-lungs"></i>
                   </span>
-                  <span class="air-quality-data" id="air_quality">: &ensp;Unhealthy</span>
+                  <span class="air-quality-data" id="air_quality"></span>
                 </li>
               </ul>
             </div>
