--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Weather App</title>
 </head>
 <body>
-  <main>
+  <main class="main-main">
     <div class="main">
       <div class="container">
         <div class="row">
