UI Error responses
Addition of and error slider that pops up when an error occurs

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <title>Weather App</title>
 </head>
 <body>
+  <div class="error-message">
+    Location not found
+  </div>
   <main class="main-main">
     <div class="main">
       <div class="container">
