Added credit html to the api provider

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <button type="button" class="btn" data-toggle="modal" data-target="#modal">
           Change Location
         </button>
+
+        <div class="credits">Powered by <a href="https://www.weatherapi.com/" title="Free Weather API">WeatherAPI.com</a></div>
       </div>
     </div>
   </main>
