UX update -Addition of title tags to icons

--- a/index.html
+++ b/index.html
@@ -56,35 +56,35 @@
               <ul class="other-conditions-list">
                 <!--#1 winds -->
                 <li class="winds list-item">
-                  <span class="icon wind-icon">
+                  <span class="icon wind-icon" title="Winds">
                     <i class="fas fa-wind"></i>
                   </span>
                   <span class="wind-data" id="winds"></span>
                 </li>
                 <!--#2 atmospheric pressure -->
                 <li class="pressure list-item">
-                  <span class="icon pressure-icon">
+                  <span class="icon pressure-icon" title="Atmospheric Pressure">
                     <i class="fas fa-tachometer-alt"></i>
                   </span>
                   <span class="pressure-data" id="pressure"></span>
                 </li>
                 <!--#3 humidity-->
                 <li class="humidity list-item" >
-                  <span class="icon humidity-icon">
+                  <span class="icon humidity-icon" title="Humidity">
                     <i class="fas fa-tint"></i>
                   </span>
                   <span class="humidity-data" id="humidity"></span>
                 </li>
                 <!--#4 uv index -->
                 <li class="uv-index list-item" >
-                  <span class="icon uv-index-icon">
+                  <span class="icon uv-index-icon" title="UV Index">
                     <i class="fas fa-sun"></i>
                   </span>
                   <span class="uv-index-data" id="uv_index"></span>
                 </li>
                 <!--#5 air quality -->
                 <li class="air-quality list-item">
-                  <span class="icon air-quality-icon">
+                  <span class="icon air-quality-icon" title="Air Quality">
                     <i class="fas fa-lungs"></i>
                   </span>
                   <span class="air-quality-data" id="air_quality"></span>
